# fluxgate-project

./: .gitignore  LICENSE  README.md
Firmware/: README.md
Firmware/Pico_Firmwares/pico-custom-firmware-udp/pico-uart-bridge-4.1/: CMakeCache.txt  CMakeLists.txt  build.ninja  randomudpt.txt  uart-bridge.c
Firmware/Pico_Firmwares/pico-custom-firmware-udp/pico-uart-bridge-4.1/elf2uf2/tmp/: ELF2UF2Build-cfgcmd.txt  ELF2UF2Build-mkdirs.cmake
Firmware/Pico_Firmwares/pico-custom-firmware-udp/pico-uart-bridge-4.1/pico-sdk/: cmake_install.cmake
Firmware/Pico_Firmwares/pico-custom-firmware-udp/pico-uart-bridge-4.1/pico-sdk/docs/: cmake_install.cmake
Firmware/Pico_Firmwares/pico-custom-firmware-udp/pico-uart-bridge-4.1/pico-sdk/src/common/: cmake_install.cmake
Firmware/Pico_Firmwares/pico-custom-firmware-udp/pico-uart-bridge-4.1/pico-sdk/src/common/pico_base/: cmake_install.cmake
Firmware/Pico_Firmwares/pico-custom-firmware-udp/pico-uart-bridge-4.1/pico-sdk/src/common/pico_stdlib/: cmake_install.cmake
Firmware/Pico_Firmwares/pico-custom-firmware-udp/pico-uart-bridge-4.1/pico-sdk/src/rp2_common/: cmake_install.cmake
Firmware/Pico_Firmwares/pico-custom-firmware-udp/pico-uart-bridge-4.1/pico-sdk/src/rp2_common/hardware_gpio/: cmake_install.cmake
Firmware/Pico_Firmwares/pico-custom-firmware-udp/pico-uart-bridge-4.1/pico-sdk/src/rp2_common/hardware_interp/: cmake_install.cmake
Firmware/Pico_Firmwares/pico-custom-firmware-udp/pico-uart-bridge-4.1/pico-sdk/tools/: cmake_install.cmake
Hardware/: README.md
Pictures/: Poster 7 son.pptx
Simulations/: README.md
(+160 files in other folders)
